cache library info; not sure if a `isFromLibrary` method would be useful